# volnateca_bot

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml
dev_scripts/: award_monthly_top.py  seed_achievements.py  seed_dev_scenarios.py  seed_quiz.py
docs/: user-support-admin-pipeline.md
migrations/: README.md  env.py  script.py.mako
migrations/versions/: 15b5f59a77d0_init.py  2d5f8d8c9b6e_seed_base_achievements.py  2f41b6a8c9d0_add_vk_referral_intents.py  31d79bc8dd94_initial_migration.py  34f34b8772a6_remove_vk_repost_task_type.py  36e1d35710d3_initial_migration.py  3b64a9157361_make_prize_redemption_idempotency_per_.py  3b724d372599_initial_migration.py  3f1f2b5c0b9a_add_task_completion_evidence.py  3f30641b21fe_init.py  4b29a945199c_init_schema.py  6f4a2b1d9c7e_add_transactions_monthly_leaderboard_index.py  7d94d7331d64_add_image_attachment_to_tasks.py  7dfe2c29004d_seed_base_achievements.py  7f1c4a7e6d8b_drop_image_url_from_quiz_questions.py  8962228ee7ba_init.py  9e27ae6f7f21_initial_migration.py  a11c6b7e3f34_init.py  c2a00e38c1fb_initial_migration.py  c90d60cb6b52_initial_migration.py  cbb51be3257d_add_code.py  da6acdb09873_add_pro_priz.py  e4ab5e40df20_init.py  ede63ce6af90_init.py  f15c9a7d2b81_add_prize_promo_codes.py  fcc1dba5c038_initial_migration.py
src/: main.py
src/application/: base_interactor.py
src/di/: config.py  ioc.py  presentation.py  providers.py  repository.py  services.py  session.py  uow.py  vk.py
tests/: test_daily_activity_stats.py  test_wallet_spend.py
(+299 files in other folders)
